[package]
name = "watr-node"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Watr Node"
license = "GPL-3.0-only"
homepage = "https://www.watr.org/"
repository = "https://github.com/Watr-Protocol/watr"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex-literal = { workspace = true }
futures = { workspace = true }

# RPC related Dependencies
jsonrpsee = { workspace = true }

# Local
watr-runtime = { workspace = true }
watr-devnet-runtime = { workspace = true }
watr-common = { workspace = true, default-features = false }

# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-keyring = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }
pallet-transaction-payment = { workspace = true, default-features = false}

# Polkadot
polkadot-cli = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true, default-features = false }

# Cumulus
cumulus-client-cli ={ workspace = true }
cumulus-client-collator ={ workspace = true }
cumulus-client-consensus-aura ={ workspace = true }
cumulus-client-consensus-common ={ workspace = true }
cumulus-client-network ={ workspace = true }
cumulus-client-service ={ workspace = true }
cumulus-primitives-core ={ workspace = true }
cumulus-primitives-parachain-inherent ={ workspace = true }
cumulus-relay-chain-inprocess-interface ={ workspace = true }
cumulus-relay-chain-interface ={ workspace = true }
cumulus-relay-chain-minimal-node ={ workspace = true }
cumulus-relay-chain-rpc-interface ={ workspace = true }
parachains-common = { workspace = true, default-features = false }

# Frontier
fc-cli = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fp-consensus = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-storage = { workspace = true }

pallet-block-reward = { workspace = true, features = ["serde"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"watr-runtime/runtime-benchmarks",
	"watr-devnet-runtime/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
]

rpc-binary-search-estimate = ["fc-rpc/rpc-binary-search-estimate"]
try-runtime = [	"try-runtime-cli/try-runtime","watr-runtime/try-runtime", "watr-devnet-runtime/try-runtime" ]
