[package]
name = "watr-evm-tracing"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Watr-Protocol/watr"

[dependencies]
ethereum-types = "0.13.1"
hex = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }

evm-tracing-events = { path = "../../primitives/evm-tracing-events" }
debug = { path = "../../primitives/debug" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master" }