[package]
name = "did"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.5.3", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }

pallet-evm = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
precompile-utils = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }

pallet-did = { workspace = true }

[dev-dependencies]
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
derive_more = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
    "pallet-evm/std",
    "precompile-utils/std",
    "sp-std/std",
    "pallet-balances/std",
    "pallet-timestamp/std"
]
