[package]
name = "pallet-did-precompile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }

pallet-evm = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
precompile-utils = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-did = { workspace = true }

[dev-dependencies]
precompile-utils = { workspace = true, features = ["testing"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
derive_more = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
    "pallet-evm/std",
    "precompile-utils/std",
    "sp-std/std",
    "pallet-balances/std",
    "pallet-timestamp/std"
]
