[package]
name = "watr-common"
version = "1.23.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Watr Runtime Common"
license = "GPL-3.0-only"
homepage = "https://www.watr.org/"
repository = "https://github.com/Watr-Protocol/watr"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
pallet-xcm = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
parachains-common = { workspace = true }

# Local
pallet-did = { workspace = true }


[features]
default = [
	"std",
]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-xcm/std",
	"pallet-did/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
